plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

group = 'com.stardevllc'
version = '0.14.0'

publishing {
    repositories {
        maven {
            name="stardev"
            url="https://repo.stardevllc.com/releases"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
    
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    
    withJavadocJar()
    withSourcesJar()
}

tasks.compileJava.dependsOn(clean)
tasks.jar.finalizedBy(javadocJar)
tasks.jar.finalizedBy(sourcesJar)
tasks.build.finalizedBy(publishToMavenLocal)
//tasks.build.finalizedBy(publish)
